Use Java 17 (+preview) only